Updated image in about

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 									Aromire</h1>
 									<p>"Data to me isn't just numbers; they are untold stories waiting to be discovered by Analysts.</p>
 								</header>
-								<div class="image main"><img src="images\IMG-20250822-WA0050.jpg" alt="" /></div>
+								<div class="image main"><img src="images\data image.jpg" alt="" /></div>
 								<p>
 									Hi, I’m Tunde Aromire. I am a Data Analyst with a passion for transforming complex data into clear, actionable insights that drive smarter business decisions.
 
